--- a/manifest.json
+++ b/manifest.json
@@ -18,5 +18,9 @@
   "permissions": [
     "*://*/*",
     "activeTab"
-  ]
+  ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  }
 }
